--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Site Title"
 title_separator          : "-"
 name                     : "Jenni Jo"
 description              : "An amazing website."
-url                      : https://JennPaskua.github.io"
+url                      : https://jennpaskua.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
